Fixed vertical alignment

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -370,7 +370,7 @@ h1 {
     .grid {
       flex-direction: column;
       grid-template-columns: repeat(2, 1fr);
-      align-items: center;
+      align-items: start;
       margin-left: auto;
       margin-right: auto;
       gap: 5em;
